code: Remove whitespace rule to fix spacing on pre

--- a/src/code/prism.css
+++ b/src/code/prism.css
@@ -1,8 +1,5 @@
 code[class*='language-'],
 pre[class*='language-'] {
-	color: #ccc;
-	background: 0 0;
-	font-family: 'Fira Code', 'Inconsolata', 'Consolas', 'Ubuntu Mono', monospace;
 	font-size: 0.8rem;
 	font-weight: 300;
 	text-align: left;
@@ -10,23 +7,8 @@ pre[class*='language-'] {
 	word-spacing: normal;
 	word-break: normal;
 	word-wrap: normal;
-	line-height: 1.4;
-	-moz-tab-size: 4;
-	-o-tab-size: 4;
-	tab-size: 4;
-	-webkit-hyphens: none;
-	-moz-hyphens: none;
-	-ms-hyphens: none;
 	hyphens: none;
-}
-:not(pre) > code[class*='language-'],
-pre[class*='language-'] {
-	background: #2d2d2d;
-}
-:not(pre) > code[class*='language-'] {
-	padding: 0.1em;
-	border-radius: 0.3em;
-	white-space: normal;
+	tab-size: 4;
 }
 .token.block-comment,
 .token.cdata,
